environment/agile-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agile-api
spec:
  selector:
    app: agile-api
    env: stepzen-playground
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
