environment/agile-api/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: agile-api
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: agile-api
